--- a/trayButton.css
+++ b/trayButton.css
@@ -1,15 +1,32 @@
 ﻿/*图片在上面,文字再下面 */
-QPushButton.trayButton
+/* 计划任务接收 */
+QPushButton[flag='jhrwjs'].trayButton
 {
-    background-image: url(:/image/dataTransfer.png);
+    background-image: url(:/image/js.png);
     background-origin: content;
     background-position: top;
-    padding-top: 0px;
+    padding-top: 5px;
     background-repeat: no-repeat;
 
     text-align: bottom;
-    padding-bottom:-50px;
-    font-size: 12px;
-    color: #FFFFFF;
+    padding-bottom:5px;
+    font-size: 14px;
+    color: black;
+    border-style: outset;
 }
+/* 物资清点同步 */
+QPushButton[flag='wzqdtb'].trayButton
+{
+    background-image: url(:/image/wzqdtb.png);
+    background-origin: content;
+    background-position: top;
+    padding-top: 5px;
+    background-repeat: no-repeat;
+
+    text-align: bottom;
+    padding-bottom:5px;
+    font-size: 14px;
+    color: black;
+}
+
 
