--- a/UIBasePlatformFrame.ui
+++ b/UIBasePlatformFrame.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1006</width>
+    <width>1010</width>
     <height>598</height>
    </rect>
   </property>
@@ -1192,6 +1192,36 @@
          </widget>
          <widget class="QWidget" name="spage2">
           <layout class="QGridLayout" name="gridLayout_8">
+           <item row="3" column="9">
+            <widget class="QComboBox" name="comboBox"/>
+           </item>
+           <item row="3" column="8">
+            <widget class="QPushButton" name="pushButton_15">
+             <property name="text">
+              <string>跳转</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="10">
+            <spacer name="horizontalSpacer_3">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item row="3" column="5">
+            <widget class="QPushButton" name="pushButton_12">
+             <property name="text">
+              <string>下一页</string>
+             </property>
+            </widget>
+           </item>
            <item row="0" column="0">
             <widget class="QLineEdit" name="lineEdit_2">
              <property name="minimumSize">
@@ -1208,7 +1238,50 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="1">
+           <item row="3" column="7">
+            <widget class="QLineEdit" name="lineEdit_3">
+             <property name="minimumSize">
+              <size>
+               <width>40</width>
+               <height>0</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>40</width>
+               <height>16777215</height>
+              </size>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="1">
+            <widget class="QPushButton" name="pushButton_5">
+             <property name="maximumSize">
+              <size>
+               <width>80</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>清空数据</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="6">
+            <widget class="QPushButton" name="pushButton_8">
+             <property name="text">
+              <string>更改</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="11">
+            <widget class="QLabel" name="label_48">
+             <property name="text">
+              <string>总数</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="2">
             <widget class="QPushButton" name="pushButton_6">
              <property name="text">
               <string>搜索</string>
@@ -1216,110 +1289,31 @@
             </widget>
            </item>
            <item row="3" column="2">
-            <spacer name="horizontalSpacer_3">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
+            <widget class="QPushButton" name="pushButton_13">
+             <property name="text">
+              <string>首页</string>
              </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
+            </widget>
            </item>
-           <item row="2" column="0" rowspan="2">
-            <widget class="QWidget" name="widget_2" native="true">
-             <layout class="QHBoxLayout" name="horizontalLayout_6">
-              <property name="spacing">
-               <number>0</number>
-              </property>
-              <property name="leftMargin">
-               <number>0</number>
-              </property>
-              <property name="topMargin">
-               <number>0</number>
-              </property>
-              <property name="rightMargin">
-               <number>0</number>
-              </property>
-              <property name="bottomMargin">
-               <number>0</number>
-              </property>
-              <item>
-               <widget class="QPushButton" name="pushButton_4">
-                <property name="minimumSize">
-                 <size>
-                  <width>80</width>
-                  <height>0</height>
-                 </size>
-                </property>
-                <property name="maximumSize">
-                 <size>
-                  <width>80</width>
-                  <height>16777215</height>
-                 </size>
-                </property>
-                <property name="text">
-                 <string>模拟数据</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QPushButton" name="pushButton_5">
-                <property name="maximumSize">
-                 <size>
-                  <width>80</width>
-                  <height>16777215</height>
-                 </size>
-                </property>
-                <property name="text">
-                 <string>清空数据</string>
-                </property>
-               </widget>
-              </item>
-             </layout>
+           <item row="3" column="4">
+            <widget class="QLabel" name="label_49">
+             <property name="text">
+              <string>TextLabel</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
             </widget>
            </item>
            <item row="3" column="3">
-            <widget class="QLabel" name="label_48">
+            <widget class="QPushButton" name="pushButton_11">
              <property name="text">
-              <string>总数</string>
+              <string>上一页</string>
              </property>
             </widget>
            </item>
-           <item row="1" column="0" colspan="4">
+           <item row="1" column="0" colspan="12">
             <widget class="QTableWidget" name="tableWidget_4">
-             <row>
-              <property name="text">
-               <string>新建行</string>
-              </property>
-             </row>
-             <row>
-              <property name="text">
-               <string>新建行</string>
-              </property>
-             </row>
-             <row>
-              <property name="text">
-               <string>新建行</string>
-              </property>
-             </row>
-             <row>
-              <property name="text">
-               <string>新建行</string>
-              </property>
-             </row>
-             <row>
-              <property name="text">
-               <string>新建行</string>
-              </property>
-             </row>
-             <row>
-              <property name="text">
-               <string>新建行</string>
-              </property>
-             </row>
              <row>
               <property name="text">
                <string>新建行</string>
@@ -1415,6 +1409,53 @@
                <string>新建列</string>
               </property>
              </column>
+            </widget>
+           </item>
+           <item row="0" column="3">
+            <widget class="QPushButton" name="pushButton_10">
+             <property name="text">
+              <string>重置</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="5">
+            <widget class="QPushButton" name="pushButton_9">
+             <property name="text">
+              <string>删除</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="4">
+            <widget class="QPushButton" name="pushButton_7">
+             <property name="text">
+              <string>新增</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="6">
+            <widget class="QPushButton" name="pushButton_14">
+             <property name="text">
+              <string>尾页</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="0">
+            <widget class="QPushButton" name="pushButton_4">
+             <property name="minimumSize">
+              <size>
+               <width>80</width>
+               <height>0</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>80</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>模拟数据</string>
+             </property>
             </widget>
            </item>
           </layout>
